Ajout de EncodageSituation